update pyright to report missing param type annotations;

--- a/djmgmt/pyrightconfig.json
+++ b/djmgmt/pyrightconfig.json
@@ -1,3 +1,7 @@
 {
-    "reportPrivateImportUsage": "none"
+    "reportPrivateImportUsage": "none",
+    "reportMissingParameterType": "error",
+    "ignore": [
+        "src/audacity_script_sample.py"
+    ]
 }
