update pyright to treat unused import, variables as errors

--- a/djmgmt/pyrightconfig.json
+++ b/djmgmt/pyrightconfig.json
@@ -2,6 +2,8 @@
     "reportPrivateImportUsage": "none",
     "reportMissingParameterType": "error",
     "reportMissingTypeArgument": "error",
+    "reportUnusedImport": "error",
+    "reportUnusedVariable": "error",
     "ignore": [
         "src/audacity_script_sample.py"
     ]
